# Ionic-Swap

./: .gitignore  ARCHITECTURE.md  BRIDGELESS_MULTICHAIN_TOKEN.md  BRIDGELESS_TOKEN_README.md  CROSSCHAIN_LIQUIDITY_UNIFICATION_WHITEPAPER.md  CROSSCHAIN_SWAP_FINAL_STATUS.md  Cargo.lock.backup  Cargo.toml  DEPLOYMENT_SUMMARY.md  EVM_INTEGRATION_DOCUMENTATION.md  GASLESS_PERMIT_SYSTEM.md  HTLC_DEVELOPMENT_BACKLOG.md  ICP_CANISTER_TEST_DOCUMENTATION.md  LICENSE  LIQUIDITY_STAKING_MVP.md  PHASE1_EXECUTION_PLAN.md  README.md  SOLANA_BUILD_PROBLEM.md  SOLANA_ESCROW_WORKFLOW.md  STAGE_1_IMPLEMENTATION.md  TECHNICAL_REQUIREMENTS.md  TESTNET_FAUCETS.md  TEST_UNIFIED_POOLS.md  all-token-addresses.json  astro.config.mjs  calculate_selector.cjs  canister_ids.json  deploy_frontend.sh  dfx-proxy  dfx.json  ic_ed25519.md  mops.toml  package-lock.json  package.json  temporaryFile.txt  test-solana-integration.ts  test-unified-pools.ts  test_automation.sh  todo
.dfx/local/: canister_ids.json  network-id
.github/workflows/: check.yml  release.yml  staging.yml
backend/: Cargo.toml  backend.did
backend/src/: errors.rs  handlers.rs  lib.rs  storage.rs  types.rs
bots/: README.md  index.ts  test-strategy.js
bots/core/: bootstrap.ts  index.ts
bots/state/: StateStore.ts
bots/strategies/: index.ts
bots/types/: index.ts
bots/utils/: index.ts  marketData.ts
bots_state/: alice.json  bob.json  charlie.json  diana.json  eve.json  frank.json  grace.json  henry.json  iris.json  jack.json
documentation/: HTLC_DEVELOPMENT_BACKLOG.md  README_CROSS_CHAIN_ORDERBOOK.md  TEST_SETUP_GUIDE.md
frontend/: package-lock.json  package.json  test_bidirectional_crosschain_swaps.ts  test_complete_crosschain_with_solana_tx.ts  test_marketplace.ts  test_nft_marketplace_flow.ts  test_real_crosschain_swaps.ts  transfer-solana-tokens.ts
github-rust-sol-rpc-canister-ninja/: Cargo.toml  README.md  basic_solana.did  dfx.json
github-rust-sol-rpc-canister-ninja/src/: ed25519.rs  lib.rs  main.rs  solana_wallet.rs
github-rust-sol-rpc-canister-ninja/src/spl/: mod.rs  tests.rs
runners/: prod_deploy.sh
scripts/: README-SOLANA-TESTS.md  check-canister-balance.js  create-exact-stardust-account.js  create-stardust-account-manual.js  create-stardust-account.js  deploy-all-icrc-tokens.sh  deploy-backend.sh  deploy-icrc-tokens.sh  derive-backend-ata-addresses.js  distribute-test-tokens.js  fund-canister-direct.js  fund-canister-spl-tokens.js  fund-canister.ts  fund-correct-stardust-account.js  fund-current-canister-accounts.js  fund-evm-test-wallets.ts  fund-exact-stardust-account.js  fund-icp-test-wallets.ts  fund-solana-test-accounts.js  fund-test-wallets.ts  generate-evm-test-wallets.ts  generate-icp-test-wallets.ts  generate-sol-test-wallets.ts  run-solana-tests.cjs  setup-token-distribution.sh  test-canister-gasless-flow.js  test-complete-gasless-flow.cjs  test-config.json  test-direct-transfer.js  test-evm-gasless-permit.ts  test-evm-icp-cross-chain.cjs  test-evm-to-icp.cjs  test-full-crosschain.cjs  test-gasless-permit.ts  test-icp-atomic-swap.cjs  test-icp-flow.ts  test-icp-htlc-creation.cjs  test-icp-solana-swap.cjs  test-icp-to-evm.cjs  test-icp-to-solana-direct.js  (+24 more)
src/: CROSS_CHAIN_LIMIT_ORDER_PLAN.md  CROSS_CHAIN_ORDERBOOK_TEST_RESULTS.md
src/EVM/: .env.example  HTLCEscrow.sol.bak  ICPSwapEscrow.sol.bak  hardhat.config.js  package-lock.json  package.json
src/EVM/cache/: solidity-files-cache.json
src/EVM/contracts/: IonicSwapEscrow.sol
src/backend/: Cargo.toml  README.md  backend.did  dfx.json
src/backend/src/: bridgeless_token.rs  constants.rs  evm.rs  http_client.rs  icp.rs  lib.rs  solana.rs  solana_htlc.rs  solana_wallet.rs  spl.rs  state.rs  storage.rs  swap.rs  types.rs  unified_pools.rs
src/backend/src/evm/: core.rs  erc20.rs  mod.rs  permit.rs  swap.rs  types.rs  wallet.rs
src/backend/src/icp/: balances.rs  config.rs  faucet.rs  liquidity.rs  mod.rs  permit.rs  queries.rs  storage.rs  swap.rs  types.rs
src/backend/src/icp_tokens/: balances.rs  faucet.rs  mod.rs  queries.rs  storage.rs  types.rs
src/backend/src/oracle/: aggregator.rs  binance.rs  coincap.rs  coingecko.rs  cryptocompare.rs  mod.rs  scheduler.rs  types.rs
src/backend/src/solana/: core.rs  mod.rs  spl.rs  swap.rs  types.rs  wallet.rs
src/backend/src/tokens/: evm_tokens.rs  icp_tokens.rs  mod.rs  registry.rs  solana_tokens.rs  types.rs
src/backend/src/user/: errors.rs  handlers.rs  mod.rs  storage.rs  types.rs
src/bridgeless-token/: hardhat.config.js  package-lock.json  package.json
src/components/: Header.astro  Panel.astro  Starfield.astro
src/cross_chain_orderbook/: README.md  main.mo
src/etherlink/: ETHERLINK_ICP_INTEGRATION_REPORT.md  README.md  env.example  hardhat.config.js  package-lock.json  package.json  test.env  token-metadata.json
src/evm/: README.md  env.example  hardhat.config.js  package-lock.json  package.json
src/frontend/: .eslintrc.js  .prettierignore  .prettierrc  README.md  Todo  app.config.ts  app.vue  index.html  nftropoly.service  nginx-production.conf  nginx-ssr.conf  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js  to-do  vite.config.js
src/fusion_htlc_canister/: main.mo
src/layouts/: Layout.astro
src/pages/: index.astro
src/sepolia_test/: main.mo
src/solana/: Cargo.toml  DEPLOYMENT_GUIDE.md  ESCROW_README.md  README.md  all-tokens-solana.json  deployer-keypair.json  env.example  htlc-deployment.json  package-lock.json  package.json  spiral-stardust-tokens.json  token-info.json
src/solana/keypairs/: deployer-keypair.json
src/solana/scripts/: check-sol-balances.js  create-keypair.js  create-simple-token.js  create-token.js  deploy-all-tokens.js  deploy-escrow.js  deploy-htlc.js  deploy-real.js  deploy-spiral-stardust.js  deploy.js  fund-canister.js  fund-deployer.js  simple-deploy.js  test-escrow.js  test-htlc-interaction.js  test-setup.js  transfer-sol.js
src/solana/src/: htlc_program.rs  lib.rs  minimal_htlc.rs
src/swap-frontend/: README_META_TRANSACTIONS.md  package-lock.json  package.json
src/token/: Token.mo
(+393 files in other folders)
