[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bs58 = "0.5.1"
candid = "0.10.14"
ed25519-dalek = "2.1.0"
getrandom = { version = "*", default-features = false, features = ["custom"] }
ic-cdk = "0.19.0-beta.1"
ic-http-certification = "3.0.3"
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "time", "macros"] }
sha2 = "0.10.8"
sha3 = "0.10.1"
hex = "0.4.3"
base64 = "0.22.0"
bincode = "1.3.3"

# ============================================================================
# SOLANA LIBRARIES - EXACT same versions as sol-rpc-canister!
# ============================================================================
# These are the EXACT same libraries used by sol-rpc-canister for proper transaction handling
solana-hash = "3.0.0"
solana-instruction = "3.0.0"
solana-message = "3.0.0"
solana-pubkey = { version = "3.0.0", features = ["curve25519"] }
solana-signature = "3.1.0"
solana-system-interface = { version = "2.0.0", features = ["bincode"] }
solana-transaction = { version = "3.0.0", features = ["bincode"] }
spl-associated-token-account-interface = "2.0.0"

[dev-dependencies]
candid_parser = "0.1.4"