[package]
name = "ionic-solana-token"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
solana-program = "~1.17.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
borsh = "0.10.3"
borsh-derive = "0.10.3"
thiserror = "1.0.40"

[dev-dependencies]
solana-program-test = "~1.17.0"
solana-sdk = "~1.17.0"

[lib]
crate-type = ["cdylib", "lib"]
